--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-instance/
+*/instance/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
